more z-index fixes

--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -119,7 +119,7 @@ body {
   padding: 0 8px;
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 2;
 }
 
 .tube-status-header__heading-title {
@@ -576,7 +576,7 @@ body {
   background-color: var(--default-white);
   border-radius: 10px;
   box-shadow: 4px 12px 47px 0 rgba(0, 0, 0, 0.15);
-  z-index: 2;
+  z-index: 3;
 }
 
 .tube-status-modal--active:not(.tube-status-modal--subscribe) {
@@ -717,7 +717,7 @@ body {
   border-radius: 10px;
   box-shadow: 4px 12px 47px 0 rgba(0, 0, 0, 0.15);
   animation: fade-in 0.5s ease;
-  z-index: 0;
+  z-index: 1;
 }
 
 .tube-status-tooltip__message {
